Fix scrollbar

--- a/assets/sass/custom/theme/_global.scss
+++ b/assets/sass/custom/theme/_global.scss
@@ -40,7 +40,7 @@ html, body {
 }
 
 ::-webkit-scrollbar-thumb:window-inactive {
-	background: rgba(255,0,0,0.4);
+	background: $dark_turquoise;
 }
 
 body {
